# myEfrei-sdk

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: ci.yml
myefrei_sdk/: __init__.py  _constants.py  absence.py  client.py  course.py  error.py  internship.py  notification.py  pave.py  room.py  semester.py  slide.py  student.py  teacher.py
myefrei_sdk/types/: absence.py  course.py  courses.py  exam_paper.py  grade.py  internship.py  moodle.py  notification.py  pave.py  room.py  semester.py  slide.py  student.py  teacher.py  user.py
tests/: conftest.py  test_client_aenter.py  test_client_connect.py  test_client_courses.py  test_client_documents.py  test_client_internships.py  test_client_notifications.py  test_client_pave.py  test_client_rooms.py  test_client_semesters.py  test_client_slides.py
